--- a/project.html
+++ b/project.html
@@ -576,127 +576,182 @@
                         </div>
                     </div>
                 </div>
-                <div class="row position-relative" data-aos="fade-up" data-aos-duration="1500">
-                    <div class="testimonial__3__slider__active swiper">
-                        <div class="swiper-wrapper testimonial__3__wraper">
-                            <div class="testimonial__3__single__wraper swiper-slide col-md-4">
+                <div class="row position-relative aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
+                    <div
+                        class="testimonial__3__slider__active swiper swiper-initialized swiper-horizontal swiper-backface-hidden">
+                        <div class="swiper-wrapper testimonial__3__wraper" id="swiper-wrapper-888829a5cc6100593"
+                            aria-live="polite"
+                            style="cursor: grab; transition-duration: 0ms; transform: translate3d(-760px, 0px, 0px);">
+                            <div class="testimonial__3__single__wraper swiper-slide col-md-4" role="group"
+                                aria-label="1 / 5" style="width: 380px;">
                                 <div class="testimonial__3__single__inner">
                                     <div class="testimonial__3__content bg__pink common__gradient__bg ">
-                                        <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                                            laboris nisi ut aliquip ex ea commodo.”</p>
+                                        <div class="star-wrapper s-m-b-8 mb-3">
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                        </div>
+                                        <p>“Digital Minds On UI team demonstrated exceptional skill in grasping the
+                                            functionality of our previous site and our needs for the new one. Their
+                                            extensive web development expertise resulted in personalized and effective
+                                            recommendations tailored to our project.”</p>
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="assets/img/testimonial/testimonial__4.png" alt="img">
+                                            <img src="assets/img/testimonial/testimonial__4.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0);">Mattie Warner</a></h6>
+                                            <h6><a href="#">Mattie Warner</a></h6>
                                             <p>Business Man</p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="testimonial__3__single__wraper swiper-slide col-md-4">
+                            <div class="testimonial__3__single__wraper swiper-slide col-md-4 swiper-slide-prev"
+                                role="group" aria-label="2 / 5" style="width: 380px;">
                                 <div class="testimonial__3__single__inner">
-                                    <div class="testimonial__3__content bg__pink common__gradient__bg">
-                                        <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                                            laboris nisi ut aliquip ex ea commodo.”</p>
+
+                                    <div class="testimonial__3__content bg__pink common__gradient__bg ">
+                                        <div class="star-wrapper s-m-b-8 mb-3">
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                        </div>
+                                        <p>“Digital Minds On created a leading app for the client, attracting 1.5
+                                            million users. The team consistently meets sprint goals and demonstrates
+                                            exceptional project management. They are collaborative, supportive,
+                                            knowledgeable, and reliable.”</p>
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="assets/img/testimonial/testimonial__5.png" alt="img">
+                                            <img src="assets/img/testimonial/testimonial__5.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0);">Kristin Gilbert</a></h6>
+                                            <h6><a href="#">Kristin Gilbert</a></h6>
                                             <p>Business Man</p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="testimonial__3__single__wraper swiper-slide col-md-4">
+                            <div class="testimonial__3__single__wraper swiper-slide col-md-4 swiper-slide-active"
+                                role="group" aria-label="3 / 5" style="width: 380px;">
                                 <div class="testimonial__3__single__inner">
-                                    <div class="testimonial__3__content bg__pink common__gradient__bg">
-                                        <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                                            laboris nisi ut aliquip ex ea commodo.”</p>
+                                    <div class="testimonial__3__content bg__pink common__gradient__bg ">
+                                        <div class="star-wrapper s-m-b-8 mb-3">
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                        </div>
+                                        <p>“The client is pleased with Digital Minds On's performance. They successfully
+                                            established the system's foundation, meeting expectations. Their effective
+                                            project management ensures timely task delivery and prompt issue resolution,
+                                            making the engagement a success.”</p>
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="assets/img/testimonial/testimonial__6.png" alt="img-fluid">
+                                            <img src="assets/img/testimonial/testimonial__6.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0);">Arlene Miles</a></h6>
+                                            <h6><a href="#">Arlene Miles</a></h6>
                                             <p>Business Man</p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="testimonial__3__single__wraper swiper-slide col-md-4">
+                            <div class="testimonial__3__single__wraper swiper-slide col-md-4 swiper-slide-next"
+                                role="group" aria-label="4 / 5" style="width: 380px;">
                                 <div class="testimonial__3__single__inner">
-                                    <div class="testimonial__3__content bg__pink common__gradient__bg">
-                                        <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                                            laboris nisi ut aliquip ex ea commodo.”</p>
+                                    <div class="testimonial__3__content bg__pink common__gradient__bg ">
+                                        <div class="star-wrapper s-m-b-8 mb-3">
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                        </div>
+                                        <p>“Although the application is not yet launched, the client was extremely
+                                            pleased with Digital Minds On. Their timely, organized, and proactive team
+                                            demonstrated outstanding communication and professionalism throughout the
+                                            entire process.”</p>
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="assets/img/testimonial/testimonial__4.png" alt="img-fluid">
+                                            <img src="assets/img/testimonial/testimonial__4.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0);">Mattie Warner</a></h6>
+                                            <h6><a href="#">Mattie Warner</a></h6>
                                             <p>Business Man</p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="testimonial__3__single__wraper swiper-slide col-md-4">
+                            <div class="testimonial__3__single__wraper swiper-slide col-md-4" role="group"
+                                aria-label="5 / 5" style="width: 380px;">
                                 <div class="testimonial__3__single__inner">
-                                    <div class="testimonial__3__content bg__pink common__gradient__bg">
-                                        <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                                            laboris nisi ut aliquip ex ea commodo.”</p>
+
+                                    <div class="testimonial__3__content bg__pink common__gradient__bg ">
+                                        <div class="star-wrapper s-m-b-8 mb-3">
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                        </div>
+                                        <p>“The client was thoroughly impressed with the WordPress development services.
+                                            The team showcased exceptional skills, delivering a well-organized and
+                                            timely project. Their proactive communication and professionalism made the
+                                            entire process smooth and enjoyable.”</p>
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="assets/img/testimonial/testimonial__5.png" alt="img-fluid">
+                                            <img src="assets/img/testimonial/testimonial__5.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0);">Mattie Warner</a></h6>
+                                            <h6><a href="#">Mattie Warner</a></h6>
                                             <p>Business Man</p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
                     </div>
 
                     <div class="slider__controls__wrap slider__controls__pagination slider__controls__arrows">
-                        <div class="swiper-button-next arrow-btn arrow-btn-3">
+                        <div class="swiper-button-next arrow-btn arrow-btn-3 swiper-button-disabled" tabindex="-1"
+                            role="button" aria-label="Next slide" aria-controls="swiper-wrapper-888829a5cc6100593"
+                            aria-disabled="true">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M14.4297 5.92999L20.4997 12L14.4297 18.07" stroke="#fff" stroke-width="1.5"
-                                    stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                                    stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
                                 <path d="M3.5 12H20.33" stroke="#fff" stroke-width="1.5" stroke-miterlimit="10"
-                                    stroke-linecap="round" stroke-linejoin="round" />
+                                    stroke-linecap="round" stroke-linejoin="round"></path>
                             </svg>
 
                         </div>
-                        <div class="swiper-button-prev arrow-btn arrow-btn-3">
+                        <div class="swiper-button-prev arrow-btn arrow-btn-3" tabindex="0" role="button"
+                            aria-label="Previous slide" aria-controls="swiper-wrapper-888829a5cc6100593"
+                            aria-disabled="false">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M9.57031 5.92999L3.50031 12L9.57031 18.07" stroke="#fff" stroke-width="1.5"
-                                    stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                                    stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
                                 <path d="M20.5 12H3.67" stroke="#fff" stroke-width="1.5" stroke-miterlimit="10"
-                                    stroke-linecap="round" stroke-linejoin="round" />
+                                    stroke-linecap="round" stroke-linejoin="round"></path>
                             </svg>
                         </div>
-                        <!-- <div class="swiper-pagination"></div> -->
+
                     </div>
 
                 </div>
