--- a/about.html
+++ b/about.html
@@ -378,9 +378,10 @@
                                             <h6> Mission & Vision</h6>
                                         </div>
                                         <div class="about__text__2">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, <a href="#">sed
-                                                    do eiusmod tempor incididunt</a> ut labore et dolore magna aliqua.
-                                                Ut enim ad minim veniam, quis nostrud</p>
+                                            <p>Digital Minds On
+                                                32 years of expertise in Software,  Web & App development, and UI/UX Design,
+                                                delivering innovative solutions for business growth.</p>
+
                                         </div>
                                         <div class="about__button">
                                             <a class="default__button" href="#">LEARN MORE ABOUT</a>
@@ -416,9 +417,8 @@
                                     <h3>CONSULTING EXPERTISE! YOU CAN TRUST.</h3>
                                 </div>
                                 <div class="section__title__text__3">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed ut labore et dolore
-                                        magna aliqua
-                                        enim ad minim veniam.</p>
+                                    <p>Consulting expertise you can trust in web development, app development, and
+                                        software development to drive business success.</p>
                                 </div>
 
                             </div>
@@ -429,10 +429,10 @@
                             <div class="team__member__3__single text-center single__transform">
                                 <div class="team__member__3__single__inner">
                                     <div class="team__member__3__img">
-                                        <img src="assets/img/team/team_15.png" alt="">
+                                        <img src="assets/img/team/Ahmad.png" alt="">
                                     </div>
                                     <div class="team__member__name">
-                                        <h6><a href="#">GINGER GRIFFITH</a></h6>
+                                        <h6><a href="#">M Ahmad</a></h6>
                                         <p>Founder & CEO</p>
                                     </div>
                                     <div class="team__member__icon">
@@ -457,11 +457,11 @@
                             <div class="team__member__3__single text-center single__transform">
                                 <div class="team__member__3__single__inner">
                                     <div class="team__member__3__img">
-                                        <img src="assets/img/team/team_16.png" alt="">
+                                        <img src="assets/img/team/tahir.png" alt="">
                                     </div>
                                     <div class="team__member__name">
-                                        <h6><a href="#">SUNDIE GINDIE</a></h6>
-                                        <p>Founder & COO</p>
+                                        <h6><a href="#">M Tahir</a></h6>
+                                        <p>Principal Software Engineer</p>
                                     </div>
                                     <div class="team__member__icon">
                                         <ul>
@@ -485,11 +485,11 @@
                             <div class="team__member__3__single text-center single__transform">
                                 <div class="team__member__3__single__inner">
                                     <div class="team__member__3__img">
-                                        <img src="assets/img/team/team_17.png" alt="">
+                                        <img src="assets/img/team/Butt.jpeg" alt="">
                                     </div>
                                     <div class="team__member__name">
-                                        <h6><a href="#">SABRINA TUCKER</a></h6>
-                                        <p>Project Manager</p>
+                                        <h6><a href="#">M Nadeem</a></h6>
+                                        <p>Mobile App Developer</p>
                                     </div>
                                     <div class="team__member__icon">
                                         <ul>
