--- a/team.html
+++ b/team.html
@@ -820,8 +820,7 @@
                                 <h3>IN-DEPTH ANALYSIS AND DISCUSSION</h3>
                             </div>
                             <div class="blog__4__section__title__text">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore.</p>
+                                <p>Check out our software development blog to know more about software Company, new trends and business management ideas.</p>
                             </div>
                             <div class="section__title__button">
                                 <a class="default__button" href="project">VIEW ARCHIVE POST</a>
@@ -839,10 +838,11 @@
                                 <p><span class="text__gradient ">08 May, 2024</span></p>
                             </div>
                             <div class="blog__4__heading">
-                                <h6><a href="ui-ux-design">What is UI/UX Design?</a></h6>
+                                <h6><a href="ui-ux-design">What is Mobile APP Development?</a></h6>
                             </div>
                             <div class="blog__4__text">
-                                <p>UI/UX design stands for User Interface (UI) and User Experience (UX) Design.</p>
+                                <p>Mobile application development is the process of designing, developing..
+                                </p>
                             </div>
                             <div class="blog__4__button">
                                 <a class="default__button btn__black" href="ui-ux-design">READ MORE</a>
