--- a/about.html
+++ b/about.html
@@ -379,12 +379,13 @@
                                         </div>
                                         <div class="about__text__2">
                                             <p>Digital Minds On
-                                                32 years of expertise in Software,  Web & App development, and UI/UX Design,
+                                                32 years of expertise in Software, Web & App development, and UI/UX
+                                                Design,
                                                 delivering innovative solutions for business growth.</p>
 
                                         </div>
                                         <div class="about__button">
-                                            <a class="default__button" href="#">LEARN MORE ABOUT</a>
+                                            <a class="default__button" href="contact">LEARN MORE ABOUT</a>
                                         </div>
                                     </div>
                                 </div>
@@ -394,7 +395,8 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" data-aos="fade-up" data-aos-duration="1500">
                             <div class="about__img__3" data-tilt>
-                                <img src="assets/img/about/about__4.png" alt="">
+                                <img src="assets/img/about/medium-shot-executive-men.jpg" alt=""
+                                    style="border-radius: 20px 20px 20px 20px;">
                             </div>
                         </div>
                     </div>
@@ -429,22 +431,32 @@
                             <div class="team__member__3__single text-center single__transform">
                                 <div class="team__member__3__single__inner">
                                     <div class="team__member__3__img">
-                                        <img src="assets/img/team/Ahmad.png" alt="">
+                                        <img src="assets/img/team/Ahmad.png" alt="img">
                                     </div>
                                     <div class="team__member__name">
-                                        <h6><a href="#">M Ahmad</a></h6>
+                                        <h6><a href="javascript:void(0)">M Ahmad</a></h6>
                                         <p>Founder & CEO</p>
                                     </div>
                                     <div class="team__member__icon">
                                         <ul>
                                             <li>
-                                                <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
+                                                <a class="direction__btn"
+                                                    href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fdifitalmindson"
+                                                    target="_blank">
+                                                    <i class="icofont-facebook"></i>
+                                                </a>
                                             </li>
                                             <li>
-                                                <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
+                                                <a class="direction__btn" href="https://twitter.com/digitalmindson"
+                                                    target="_blank">
+                                                    <i class="icofont-twitter"></i>
+                                                </a>
                                             </li>
                                             <li>
-                                                <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
+                                                <a class="direction__btn" href="skype:live:.cid.a40e7b5b65a42e46?chat"
+                                                    target="_blank">
+                                                    <i class="icofont-skype"></i>
+                                                </a>
                                             </li>
                                         </ul>
                                     </div>
@@ -460,19 +472,19 @@
                                         <img src="assets/img/team/tahir.png" alt="">
                                     </div>
                                     <div class="team__member__name">
-                                        <h6><a href="#">M Tahir</a></h6>
+                                        <h6><a href="javascript:void(0)">M Tahir</a></h6>
                                         <p>Principal Software Engineer</p>
                                     </div>
                                     <div class="team__member__icon">
                                         <ul>
                                             <li>
-                                                <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
+                                                <a class="direction__btn" href="javascript:void(0)"><i class="icofont-facebook"></i></a>
                                             </li>
                                             <li>
-                                                <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
+                                                <a class="direction__btn" href="javascript:void(0)"><i class="icofont-twitter"></i></a>
                                             </li>
                                             <li>
-                                                <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
+                                                <a class="direction__btn" href="javascript:void(0)"><i class="icofont-skype"></i></a>
                                             </li>
                                         </ul>
                                     </div>
@@ -488,19 +500,19 @@
                                         <img src="assets/img/team/Butt.jpeg" alt="">
                                     </div>
                                     <div class="team__member__name">
-                                        <h6><a href="#">M Nadeem</a></h6>
+                                        <h6><a href="javascript:void(0)">M Nadeem</a></h6>
                                         <p>Mobile App Developer</p>
                                     </div>
                                     <div class="team__member__icon">
                                         <ul>
                                             <li>
-                                                <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
+                                                <a class="direction__btn" href="javascript:void(0)"><i class="icofont-facebook"></i></a>
                                             </li>
                                             <li>
-                                                <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
+                                                <a class="direction__btn" href="javascript:void(0)"><i class="icofont-twitter"></i></a>
                                             </li>
                                             <li>
-                                                <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
+                                                <a class="direction__btn" href="javascript:void(0)"><i class="icofont-skype"></i></a>
                                             </li>
                                         </ul>
                                     </div>
